--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/css": "^11.5.0",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bip39": "^3.0.4",
+    "downshift": "^6.1.7",
+    "emotion": "^11.0.0",
+    "match-sorter": "^6.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-emotion": "^10.0.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
